@@ -1,3 +1,6 @@
+2010-05-12  6.6.1-8 Cristy  <quetzlzacatenango@image...>
+  * Increase the estimated # points for the path drawing primitive.
+
 2010-05-12  6.6.1-8 Anthony Thyssen <A.Thyssen@griffith...>
   * Implementation of Pattern Matching Morphology methods
     HitAndMiss, Thicken, Thinning
